# mono

./: .env.example  .gitignore  .npmrc  COMMIT_MESSAGE.txt  PR_DESCRIPTION.md  README.md  next.config.ts  package.json  turbo.json
.github/workflows/: docker-build.yml
actions/: repositories.ts
app/(main)/: page.tsx
apps/api/: Cargo.toml  Dockerfile  eslint.config.mjs  package.json  tsup.config.ts
apps/api/src/: auth.rs  auth.ts  cache.ts  config.rs  config.ts  db.ts  index.ts  main.rs  redis.ts  s3.rs  s3.ts
apps/api/src/.well-known/oauth-authorization-server/: route.ts
apps/api/src/.well-known/openid-configuration/: route.ts
apps/api/src/email/: index.ts
apps/api/src/git/: handler.rs  index.ts  objects.rs  pack.rs  refs.rs  s3-fs.ts
apps/api/src/middleware/: auth.ts  logger.ts  repo.ts
apps/api/src/routes/: auth.ts  discussions.ts  file.rs  file.ts  git-protocol.ts  git.rs  git.ts  health.rs  health.ts  index.ts  issues.ts  mod.rs  notifications.ts  oauth.ts  projects.ts  pull-requests.ts  pull_requests.ts  repositories.rs  repositories.ts  search.ts  settings.rs  settings.ts  users.rs  users.ts  well-known.ts
apps/api_old/: Cargo.toml  package.json  tsconfig.json  tsup.config.ts
apps/auth-service/: Dockerfile  package.json
apps/mobile/: app.json  eslint.config.mjs  package.json  tailwind.config.js
apps/oauth-test/: eslint.config.mjs  package.json
apps/web/: Dockerfile  eslint.config.mjs  next.config.ts  package.json  routeTree.gen.ts  (+2 more)
components/: clone-url.tsx  repo-list.tsx  star-button.tsx
db/: schema.ts
lib/: r2-fs.ts  utils.ts
(+240 files in other folders)
