[package]
name = "gitbruv-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8", features = ["macros", "multipart"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-s3 = { version = "1", features = ["behavior-version-latest"] }

gix = { version = "0.70", default-features = false, features = ["pack-cache-lru-static"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

dotenvy = "0.15"
thiserror = "2"

sha1 = "0.10"
hex = "0.4"
bytes = "1"
flate2 = "1"
bcrypt = "0.17"
regex = "1"
dashmap = "5.5"
base64 = "0.22"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
redis = { version = "0.27", features = ["tokio-comp", "connection-manager", "tls-rustls", "tokio-rustls-comp"] }
rustls = { version = "0.23", features = ["ring"] }
similar = "2"